@@ -491,3 +491,4 @@
   - feature: avoid the "unknown/help me" message for unloaded devices
   - feature: structure module for big installations
   - feature: Cost Control in 15_CUL_EM (CostPerUnit, BasisFeePerMonth)
+  - feature: add counter differential per time in 81_M232Counter.pm
